--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <title>Vite + React + TS</title>
+    <title>Trustroots nostr</title>
   </head>
   <body>
     <div id="root"></div>
