Uncheck unverified layer by default

--- a/nr-web/index.html
+++ b/nr-web/index.html
@@ -290,7 +290,7 @@
                     <label for="layer-triphopping">Trip Hopping</label>
                 </div>
                 <div class="layer-control">
-                    <input type="checkbox" id="layer-unverified" checked>
+                    <input type="checkbox" id="layer-unverified">
                     <label for="layer-unverified">Unverified</label>
                 </div>
             </div>
