--- a/nr-web/index.html
+++ b/nr-web/index.html
@@ -1039,6 +1039,13 @@
                     <button class="btn" onclick="saveRelays()">Save Relays</button>
                 </div>
             </div>
+            
+            <div class="settings-section">
+                <h2>About</h2>
+                <div class="form-group">
+                    <a href="https://github.com/Trustroots/nostroots/tree/main/nr-web" target="_blank" rel="noopener noreferrer" style="color: var(--primary); text-decoration: underline;">View on GitHub</a>
+                </div>
+            </div>
         </div>
     </div>
     
