nr-web: move subscribe button to top

--- a/nr-web/index.html
+++ b/nr-web/index.html
@@ -1149,9 +1149,9 @@
         <div class="modal-content notes-modal-content">
             <div class="modal-header">
                 <h2 id="pluscode-notes-title">Notes</h2>
+                <div id="notification-subscribe-block" class="notification-subscribe-block" style="display: none; padding: 0 0.5rem; font-size: 0.9rem;"></div>
                 <button class="modal-close" onclick="closePlusCodeNotesModal()">&times;</button>
             </div>
-            <div id="notification-subscribe-block" class="notification-subscribe-block" style="display: none; padding: 0.5rem 0; border-bottom: 1px solid var(--border); margin-bottom: 0.5rem; font-size: 0.9rem;"></div>
             <div id="pluscode-notes-content" class="notes-list"></div>
             <div class="notes-actions">
                 <div class="notes-add-form">
